--- a/WasmClientEFCore.Client/WasmClientEFCore.Client.csproj
+++ b/WasmClientEFCore.Client/WasmClientEFCore.Client.csproj
@@ -12,8 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\..\WasmClientEFCore.Db\WasmClientEFCore.Db.csproj" />
+    <ProjectReference Include="..\WasmClientEFCore.Db\WasmClientEFCore.Db.csproj" />
   </ItemGroup>
 
 </Project>
